final changes before demo

--- a/organisation-structure/src/app/structural-view-sample/structural-view-sample.component.html
+++ b/organisation-structure/src/app/structural-view-sample/structural-view-sample.component.html
@@ -8,210 +8,185 @@
     style="margin:8px 8px 8px 4px; background-color: lightgray;font-size: 120%;width: 32px; 
     cursor: pointer;padding : 4px;border:none"
     (click)="onZoomOut()">-</button>
-    <span class="material-icons" (click)="exportAsXLSX()" style="float:right;padding:8px;margin-right:8px;cursor: pointer;">
+    <span class="material-icons" (click)="exportAsXLSX()" style="float:right;padding:8px;margin-right:8px;cursor: pointer;" >
         save_alt
       </span>
 </div>
 <div id="wrapper">
     <div id="container"  [ngStyle]="{zoom:Percentage}" >
-        <ol  class="organizational-chart">
-            <li id="org-chart">
+        <ol class="organizational-chart">
+            <li>
                 <div>
-                    <h4>Infoview</h4>
-                    <span>[3000]</span>
+                    <h4>Cheran</h4>
+                    <span>[1413]</span>
                 </div>
                 <ol>
                     <li>
                         <div>
-                            <h4>WAP</h4>
-                            <span>[1000]</span>
+                            <h4>AC</h4>
+                            <span>[642]</span>
                         </div>
                         <ol>
                             <li>
                                 <div>
-                                    <h4>AC</h4>
-                                    <span>[500]</span>
+                                    <h4>Raj Mohan</h4>
+                                    <span>[420]</span>
                                 </div>
                                 <ol>
                                     <li>
-                                        <div (click)="onProfileClick('Rajmohan Natesan')"
-                                        style="cursor: pointer;">
-                                            <h4>Rajmohan Natesan</h4>
-                                            <span>[300]</span>
+                                        <div>
+                                            <h4>
+                                                AC CI - 3 <br>
+                                                AC Customer Support - 3<br>
+                                                CWS - Expense - 33<br>
+                                                PMO Team - 1<br>
+                                                AC Tools - 5<br>
+                                                AC COM - 25 <br>
+                                                CFM Expense - 3<br>
+                                                Asset - 26<br>
+                                                Treasury - 16<br>
+                                                Purchase - 16<br>
+                                                Quality Control - 28<br>
+                                                Operational Auto Test - 25<br>
+                                                Screen Navigation Auto Test - 20<br>
+                                                Small Size screen Test - 196<br>
+                                                Auto Test Script Assess - 20<br>
+
+                                            </h4>
                                         </div>
-                                        <ol>
-                                            <li>
-                                                <div>
-                                                    <h4>HUE-AC-V4-Pattern2</h4>
-                                                    <span>[100]</span>
-                                                </div>
-                                                <ol>
-                                                    <li>
-                                                        <div>
-                                                            <h4>CAM</h4>
-                                                            <span>[25]</span>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div>
-                                                            <h4>CCM</h4>
-                                                            <span>[25]</span>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div>
-                                                            <h4>CFM</h4>
-                                                            <span>[25]</span>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div>
-                                                            <h4>Auto Test</h4>
-                                                            <span>[25]</span>
-                                                        </div>
-                                                    </li>
-                                                </ol>
-                                            </li>
-                                            <li>
-                                                <div>
-                                                    <h4>HUE-AC-V4-Pattern3</h4>
-                                                    <span>[100]</span>
-                                                </div>
-                                                <ol>
-                                                    <li>
-                                                        <div >
-                                                            <h4>ASA</h4>
-                                                            <span>[25]</span>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div>
-                                                            <h4>ASV</h4>
-                                                            <span>[25]</span>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div>
-                                                            <h4>HC</h4>
-                                                            <span>[25]</span>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div>
-                                                            <h4>SS</h4>
-                                                            <span>[25]</span>
-                                                        </div>
-                                                    </li>
-                                                </ol>
-                                            </li>
-                                            <li>
-                                                <div>
-                                                    <h4>HUE-AC-V4-Pattern0</h4>
-                                                    <span>[100]</span>
-                                                </div>
-                                                <ol>
-                                                    <li>
-                                                        <div>
-                                                            <h4>AC CI</h4>
-                                                            <span>[25]</span>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div>
-                                                            <h4>Customer Support</h4>
-                                                            <span>[25]</span>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div>
-                                                            <h4>HUE-AC Expense</h4>
-                                                            <span>[50]</span>
-                                                        </div>
-                                                    </li>
-                                                </ol>
-                                            </li>
-                                        </ol>
-                                    </li>    
+                                    </li>
+                                </ol>
+                            </li>
+                            <li>
+                                <div>
+                                    <h4>Karthick J</h4>
+                                    <span>[222]</span>
+                                </div>
+                                <ol>
                                     <li>
-                                        <div (click)="onProfileClick('Karthick Raj Jayaraman')"
-                                        style="cursor: pointer;">
-                                            <h4>Karthick Raj Jayaraman</h4>
-                                            <span>[200]</span>
+                                        <div>
+                                            <h4>
+                                                CFW - 34 <br>
+                                                CFW QE - 12 <br>
+                                                Treasury - 24 <br>
+                                                Hue Client - Hue Web Test - 132  <br>
+                                                Licence Change - IC - 20 <br>
+                                            </h4>
                                         </div>
-                                        <ol>
-                                            <li>
-                                                <div>
-                                                    <h4>HUE-AC-V4-Pattern1</h4>
-                                                    <span>[100]</span>
-                                                </div>
-                                                <ol>
-                                                    <li>
-                                                        <div>
-                                                            <h4>CCM</h4>
-                                                            <span>[25]</span>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div>
-                                                            <h4>CFW</h4>
-                                                            <span>[25]</span>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div>
-                                                            <h4>CFW-QE</h4>
-                                                            <span>[50]</span>
-                                                        </div>
-                                                    </li>
-                                                </ol>
-                                            </li>
-                                            <li>
-                                                <div>
-                                                    <h4>HUE-AC-V4-Pattern3</h4>
-                                                    <span>[100]</span>
-                                                </div>
-                                                <ol>
-                                                    <li>
-                                                        <div>
-                                                            <h4>ASV</h4>
-                                                            <span>[25]</span>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div>
-                                                            <h4>HC</h4>
-                                                            <span>[25]</span>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div>
-                                                            <h4>LC</h4>
-                                                            <span>[50]</span>
-                                                        </div>
-                                                    </li>
-                                                </ol>
-                                            </li>
-                                        </ol>
-                                    </li>  
+                                    </li>
                                 </ol>
                             </li>
                         </ol>
                     </li>
                     <li>
                         <div>
-                            <h4>WHI</h4>
-                            <span>[1000]</span>
+                            <h4>SCM</h4>
+                            <span>[450]</span>
                         </div>
+                        <ol>
+                            <li>
+                                <div>
+                                    <h4>Suresh Kumar M </h4>
+                                    <span>[342]</span>
+                                </div>
+                                <ol>
+                                    <li>
+                                        <div>
+                                            <h4>
+                                                Sales - 35 <br>
+                                                PP - 45 <br>
+                                                IV/SCM COM - 52 <br>
+                                                Cost - 50 <br>
+                                                Project1 - 75 <br>
+                                                Project3 - 30  <br>
+                                                Functional BT - 46 <br>
+                                                SCM Cl - 5 <br>
+                                                SCM Clover - 4  <br>                                               
+
+                                            </h4>
+                                        </div>
+                                    </li>
+                                </ol>
+                            </li>
+                            <li>
+                                <div>
+                                    <h4>Balakrishnan</h4>
+                                    <span>[107]</span>
+                                </div>
+                                <ol>
+                                    <li>
+                                        <div>
+                                            <h4>
+                                                Sales - 10 <br>
+                                                PP - 12 <br>
+                                                IV/SCMCOM - 9 <br>
+                                                Cost - 10 <br>
+                                                Project1 - 10 <br>
+                                                Project2 - 10 <br>
+                                                Project3 - 6 <br>
+                                                Functional BT - 21  <br>
+                                                QE - 17 <br>
+                                                QC - 2 <br>
+                                            </h4>
+                                        </div>
+                                    </li>
+                                </ol>
+                            </li>
+                        </ol>
                     </li>
                     <li>
                         <div>
-                            <h4>RUT</h4> 
-                            <span>[1000]</span>
+                            <h4>HR (WHI)</h4> 
+                            <span>[186]</span>
                         </div>
+                        <ol>
+                            <li>
+                                <div>
+                                    <h4>Satyanarayana V </h4>
+                                    <span>[124]</span>
+                                </div>
+                                <ol>
+                                    <li>
+                                        <div>
+                                            <h4>
+                                                Attendance - 21 <br>
+                                                HR Core - 26 <br>
+                                                Payroll - 37 <br>
+                                                Customer Support - 8 <br>
+                                                Talent Management - 20 <br>
+                                                Technical Service - 6 <br>
+                                                HR CI - 3 <br>
+                                                Clover - 3     <br>                                            
+                                            </h4>
+                                        </div>
+                                    </li>
+                                </ol>
+                            </li>
+                            <li>
+                                <div>
+                                    <h4>Gunasekaran M</h4>
+                                    <span>[61]</span>
+                                </div>
+                                <ol>
+                                    <li>
+                                        <div>
+                                            <h4>
+                                                Attendance - 9 <br>
+                                                HR Core - 13 <br>
+                                                Payroll - 11 <br>
+                                                QE - 15 <br>
+                                                Talent Management - 7 <br>
+                                                Recruiting - 5 <br>                                    
+                                            </h4>
+                                        </div>
+                                    </li>
+                                </ol>
+                            </li>
+                        </ol>
                     </li>
                 </ol>
             </li>
         </ol>
-
     </div>
 </div>
+
