--- a/organisation-structure/src/app/structural-view-sample/structural-view-sample.component.css
+++ b/organisation-structure/src/app/structural-view-sample/structural-view-sample.component.css
@@ -8,18 +8,23 @@
 
 h1,h2,h3,h4,h5{
     margin: 0px;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
 }
 /* span{
     font-size: 70%;
     padding: 4px;
 } */
+
 body {
     background-color: #1d1f20;
     font-family: 'Helvetica Neue', 'Helvetica', Arial, sans-serif;
 }
 
 #wrapper {
-    margin-left: auto;
+    /* margin-left: auto; */
     margin-right: auto;
     max-width: 80em;
     padding-top: 72px;
@@ -206,15 +211,16 @@ ol.organizational-chart > li > ol > li > div {
 /*** TERTIARY ***/
 ol.organizational-chart > li > ol > li > ol > li > div {
     background-color: #b6d7e0;
-    width : 96px;
+    width : 136px;
     display: inline-block;
 }
 
 /*** QUATERNARY ***/
 ol.organizational-chart > li > ol > li > ol > li > ol > li > div {
     background-color: #b6d7e0;
-    width : 172px;
+    width : 236px;
     display: inline-block;
+    height : 360px;
 }
 
 /*** QUINARY ***/
@@ -249,7 +255,7 @@ ol.organizational-chart > li > ol > li > ol > li > ol > li > ol > li > ol >li > 
 
     ol.organizational-chart > li > div:only-of-type {
         margin-bottom: 0;
-        left : 25%;
+        left : 0%;
         /* width: calc((100% / 1) - 2em - 4px); */
     }
 
@@ -372,13 +378,13 @@ ol.organizational-chart > li > ol > li > ol > li > ol > li > ol > li > ol >li > 
         flex-wrap: nowrap;
     }
 
-    /* ol.organizational-chart > li > ol > li > ol:before,
+    ol.organizational-chart > li > ol > li > ol:before,
     ol.organizational-chart > li > ol > li > ol >li:before {
         height: 1em!important;
         left: 50%!important;
         top: 0!important;
         width: 3px!important;
-    } */
+    }
 
     ol.organizational-chart > li > ol > li >ol:after {
         display: none;
