--- a/PrabhaRaja/src/app/main-page/main-page.component.html
+++ b/PrabhaRaja/src/app/main-page/main-page.component.html
@@ -3,7 +3,7 @@
         <div style="height: inherit;max-width: 250px;align-items: center;">
             <img src="../../assets/Mypic.jpg" alt="" style="height: 168px;width: 168px;border-radius: 50%;">
             <img src="../../assets/5.png" alt="" class="emoji-movement chickEmoji" >
-            <button mat-raised-button color="accent" class="aboutButton">About me</button>
+            <button mat-raised-button color="accent" class="aboutButton" routerLink="/me">About me</button>
         </div>
         <div style="width: 100%;height: inherit;text-align: center;">
             <strong style="font-style: italic;font-size: xx-large;font-family: cursive;color: white;">ONE LIFE.</strong>
@@ -22,7 +22,7 @@
                     <mat-form-field class="example-form" style="width:30%">
                         <mat-label>Search</mat-label>
                         <input type="text"
-                        placeholder="Select by Title,Content..."
+                        placeholder="Search by Title"
                         matInput
                         [formControl]="myControl"
                         [matAutocomplete]="auto">
@@ -38,7 +38,7 @@
     </div>
     <hr>
     <app-poet-card style="display: flex;flex-wrap: wrap;"></app-poet-card>
-    <button mat-fab style="position: fixed;bottom: 8px;right: 8px;font-size: xx-large;"
+    <button mat-fab *ngIf="isAuthenticated" style="position: fixed;bottom: 8px;right: 8px;font-size: xx-large;"
     (click)="switchMode()">+</button>
         <app-new-poem *ngIf="createNew" (create)="onCreate()" (close)="switchMode()"></app-new-poem>
 </div>
