--- a/PrabhaRaja/src/app/new-poem/new-poem.component.html
+++ b/PrabhaRaja/src/app/new-poem/new-poem.component.html
@@ -19,7 +19,7 @@
             </mat-form-field>
             <mat-form-field class="example-form" >
                 <mat-label>Type here</mat-label>
-                <textarea matInput style="height: 100px;" name="poem" [formControl]="myPoem" required></textarea>
+                <textarea matInput style="height: 100px;white-space: pre-wrap;" name="poem" [formControl]="myPoem" required></textarea>
               </mat-form-field>
         </form>
     </div>
