--- a/PrabhaRaja/src/app/poet-card/poet-card.component.html
+++ b/PrabhaRaja/src/app/poet-card/poet-card.component.html
@@ -1,28 +1,31 @@
-<div *ngFor="let poem of  poems;let i=index" class="cardWidth">
-    <div style="margin: 16px;">
-        <mat-card class="example-card">
-            <mat-card-header>
-                <mat-card-title 
-                style="margin-left: -16px;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;width: 360px;"
-                [matTooltip]="poem.Header">{{poem.Header}}</mat-card-title>
-                <mat-card-subtitle style="margin-left: -8px;">{{poem.Date}}</mat-card-subtitle>
-            </mat-card-header>
-            <mat-card-content>
-                <p style="overflow-wrap: break-word;height: 120px;overflow: auto;">
-                {{poem.Content}}
-                </p>
-            </mat-card-content>
-            <mat-card-actions>
-                <button mat-fab [matBadge]="poem.likeCount" matBadgeColor="primary" matBadgeSize="medium"
-                [color]="!poem.liked?'basic':'primary'" (click)="toggleBadgeVisibility(poem.Id)">
-                <mat-icon>favorite</mat-icon>
-                </button>
-                <span style="width: 8px;display: inline-flex;"></span>
-                <button mat-fab *ngIf="isAuthenticated" color="warn" (click)="onDelete(poem.Id)">
-                <mat-icon>delete</mat-icon>
-                </button>
-            </mat-card-actions>
-        </mat-card>
+  <ng-container *ngIf="!loading" >
+    <div *ngFor="let poem of  poems;let i=index" class="cardWidth" >
+        <div style="margin: 16px;">
+            <mat-card class="example-card">
+                <mat-card-header>
+                    <mat-card-title 
+                    style="margin-left: -16px;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;width: 360px;"
+                    [matTooltip]="poem.Header">{{poem.Header}}</mat-card-title>
+                    <mat-card-subtitle style="margin-left: -8px;">{{poem.Date}}</mat-card-subtitle>
+                </mat-card-header>
+                <mat-card-content>
+                    <pre style="overflow-wrap: break-word;height: 120px;overflow: auto;white-space: pre-line;">
+                        {{poem.Content}}
+                    </pre>
+                </mat-card-content>
+                <mat-card-actions>
+                    <button mat-fab [matBadge]="poem.likeCount" matBadgeColor="primary" matBadgeSize="medium"
+                    [color]="!poem.liked?'basic':'primary'" (click)="toggleBadgeVisibility(poem.Id,!poem.liked)">
+                    <mat-icon>favorite</mat-icon>
+                    </button>
+                    <span style="width: 8px;display: inline-flex;"></span>
+                    <button mat-fab *ngIf="isAuthenticated" color="warn" (click)="onDelete(poem.Id)">
+                    <mat-icon>delete</mat-icon>
+                    </button>
+                </mat-card-actions>
+            </mat-card>
+        </div>
     </div>
-</div>
-<p *ngIf="poems.length==0" style="position: absolute;left: 50%;top: 50%;">No Data</p>
+    <p *ngIf="poems.length==0" style="position: absolute;left: 50%;top: 50%;">No Data</p>
+  </ng-container> 
+    <app-spinner  *ngIf="loading" style="position: absolute;left: 50%;top: 50%;" ></app-spinner>
