--- a/PrabhaRaja/src/app/poet-card/poet-card.component.html
+++ b/PrabhaRaja/src/app/poet-card/poet-card.component.html
@@ -9,7 +9,9 @@
                     <mat-card-subtitle style="margin-left: -8px;">{{poem.Date}}</mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
-                    <pre style="overflow-wrap: break-word;height: 120px;overflow: auto;white-space: pre-line;">
+                    <pre style="overflow-wrap: break-word;height: 120px;
+                    overflow: auto;white-space: pre-line;
+                    font-family: 'ROBOTO';">
                         {{poem.Content}}
                     </pre>
                 </mat-card-content>
