--- a/PrabhaRaja/src/app/app.component.css
+++ b/PrabhaRaja/src/app/app.component.css
@@ -1,6 +1,4 @@
-/* @media (min-width : 320px) {
-    body{
-       width: 320px;
-    }
-
-} */
+    /* html,body{
+       display:flex;
+       min-width: 440px;
+    } */
