--- a/PrabhaRaja/src/app/about-me/about-me.component.html
+++ b/PrabhaRaja/src/app/about-me/about-me.component.html
@@ -1,7 +1,8 @@
 <div  *ngIf="loading" style="display: flex;justify-content: center;"> 
     <app-spinner></app-spinner>
 </div>
-<div *ngIf="!loading" style="background-image: linear-gradient(45deg, black, #ffbdbd);">
+<div *ngIf="!loading" 
+style="background-image: linear-gradient(45deg, black, #ffbdbd);min-width: 686px;">
     <!-- <button (click)="onSave()">Save</button> -->
     <button mat-fab style="position: fixed;top: 8px;right: 8px;color: white;z-index: 1;" routerLink="/">
     <mat-icon>home</mat-icon>
@@ -58,5 +59,11 @@
             <img  src="../../assets/dancing.jpg" alt="" style="height: 140px;padding: 8px 32px;width: 140px;border-radius: 50%;">
         </div>
     
+</div>
+<div style="height: 50px;display: flex;">
+    <p style="padding-left: 8px;color: white;"><strong>Follow me @   </strong></p> 
+    <a [href]="linkedInId" target="_blank" rel="noreferrer noopener">
+        <img  src="../../assets/linkedin.png" alt="" style=" height: 30px; width:30px;margin: 8px;">
+    </a>
 </div>
 </div>
