--- a/PrabhaRaja/src/app/main-page/main-page.component.html
+++ b/PrabhaRaja/src/app/main-page/main-page.component.html
@@ -1,8 +1,9 @@
-<div style="background-image:linear-gradient(45deg, black, #ffbdbd);min-height: 100vh;">
+<div style="background-image:linear-gradient(45deg, black, #ffbdbd);min-height: 100vh;
+min-width: 440px;">
     <div style="height: 216px;padding: 8px;display: flex;">
-        <div style="height: inherit;max-width: 250px;align-items: center;">
-            <img src="../../assets/Mypic.jpg" alt="" style="height: 168px;width: 168px;border-radius: 50%;">
-            <img src="../../assets/5.png" alt="" class="emoji-movement chickEmoji" >
+        <div style="height: inherit;width: 294px;align-items: center;">
+            <img src="../../assets/Mypic2.jpg" alt="" class="pic" style="height: 168px;width: 168px;border-radius: 50%;">
+            <img src="../../assets/5.png" alt="" class="emoji-movement chickEmoji" (click)="logout()">
             <button mat-raised-button color="accent" class="aboutButton" routerLink="/me">About me</button>
         </div>
         <div style="width: 100%;height: inherit;text-align: center;">
@@ -19,7 +20,7 @@
             </div>
             <div>
                 <form class="example-form">
-                    <mat-form-field class="example-form" style="width:30%">
+                    <mat-form-field class="example-form" style="width:32%">
                         <mat-label>Search</mat-label>
                         <input type="text"
                         placeholder="Search by Title"
