Filter Fix commit

--- a/PrabhaRaja/src/app/about-me/about-me.component.html
+++ b/PrabhaRaja/src/app/about-me/about-me.component.html
@@ -65,5 +65,8 @@ style="background-image: linear-gradient(45deg, black, #ffbdbd);min-width: 686px
     <a [href]="linkedInId" target="_blank" rel="noreferrer noopener">
         <img  src="../../assets/linkedin.png" alt="" style=" height: 30px; width:30px;margin: 8px;">
     </a>
+    <a [href]="mailId" target="_blank" rel="noreferrer noopener">
+        <img  src="../../assets/mail.png" alt="" style=" height: 30px; width:30px;margin: 8px;">
+    </a>
 </div>
 </div>
