--- a/PrabhaRaja/src/app/main-page/main-page.component.html
+++ b/PrabhaRaja/src/app/main-page/main-page.component.html
@@ -19,8 +19,8 @@ min-width: 440px;">
                 style="float:right;top: 132px;animation-name: emojiFlow4;animation-duration: 9s;">
             </div>
             <div>
-                <form class="example-form">
-                    <mat-form-field class="example-form" style="width:32%">
+                <form style="width : 100%;">
+                    <mat-form-field style="width:32%">
                         <mat-label>Search</mat-label>
                         <input type="text"
                         placeholder="Search by Title"
