--- a/PrabhaRaja/src/app/poet-card/poet-card.component.html
+++ b/PrabhaRaja/src/app/poet-card/poet-card.component.html
@@ -1,7 +1,7 @@
   <ng-container *ngIf="!loading" >
     <div *ngFor="let poem of  poems;let i=index" class="cardWidth" >
         <div style="margin: 16px;">
-            <mat-card class="example-card">
+            <mat-card class="example-card" (click)="onCardClick(poem.Id)" style="cursor: pointer;">
                 <mat-card-header>
                     <mat-card-title 
                     style="margin-left: -16px;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;width: 360px;"
@@ -17,11 +17,12 @@
                 </mat-card-content>
                 <mat-card-actions>
                     <button mat-fab [matBadge]="poem.likeCount" matBadgeColor="primary" matBadgeSize="medium"
-                    [color]="!poem.liked?'basic':'primary'" (click)="toggleBadgeVisibility(poem.Id,!poem.liked)">
+                    [color]="!poem.liked?'basic':'primary'" 
+                    (click)="toggleBadgeVisibility(poem.Id,!poem.liked,$event)">
                     <mat-icon>favorite</mat-icon>
                     </button>
                     <span style="width: 8px;display: inline-flex;"></span>
-                    <button mat-fab *ngIf="isAuthenticated" color="warn" (click)="onDelete(poem.Id)">
+                    <button mat-fab *ngIf="isAuthenticated" color="warn" (click)="onDelete(poem.Id,$event)">
                     <mat-icon>delete</mat-icon>
                     </button>
                 </mat-card-actions>
