spinner issue on nework error

--- a/PrabhaRaja/src/app/poet-card/poet-card.component.html
+++ b/PrabhaRaja/src/app/poet-card/poet-card.component.html
@@ -29,7 +29,7 @@
             </mat-card>
         </div>
     </div>
-    <p *ngIf="poems.length==0" style="position: absolute;left: 50%;top: 50%; color: white;">No Data</p>
+    <p *ngIf="poems?poems.length==0:false" style="position: absolute;left: 50%;top: 50%; color: white;">No Data</p>
   </ng-container> 
     <!-- <app-spinner  *ngIf="loading" 
     style="position: absolute;left: 50%;top: 50%;" ></app-spinner> -->
